<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--Application Names-->
    <string name="app_name">IP Address Manager</string>
    <string name="calculator_name">CIDR Calculator</string>

    <!--Menu Bar-->
    <string name="menu_bar_button_logout">Logout</string>

    <!--Auth Activity-->
    <string name="auth_logout_successful">Logout Successful!</string>

    <!--Login Fragment-->
    <string name="login_hint_email">Email</string>
    <string name="login_hint_password">Password</string>
    <string name="login_button_login">Login</string>
    <string name="login_failed">Login Failed!</string>

    <!--Registration Fragment-->
    <string name="registration_hint_password_confirmation">Password Confirmation</string>
    <string name="registration_failed">Registration Failed!</string>
    <string name="registration_error_password_mismatch">Password does not match.</string>

    <!--List Fragment-->
    <string name="list_login_successful">Login Successful!</string>

    <!--Network Fragment-->
    <string name="network_button_delete">Delete</string>
    <string name="network_delete_successful">Deletion Successful!</string>

    <!--CIDR Notations Fragment-->
    <string name="cidr_notations_info_cidr_notations">CIDR Notations:</string>
    <string name="cidr_notations_placeholder_num_cidr_notaitons">999</string>

    <!--Calculator Fragment-->
    <string name="calculator_hint_ip_address">IP Address</string>
    <string name="calculator_hint_number_of_addresses">Number of Addresses</string>
    <string name="calculator_button_calculate">Calculate</string>
    <string name="calculator_button_register">Register</string>
    <string name="calculator_button_clear">Clear</string>
    <string name="calculator_error_input">Invalid Input!</string>
    <string name="calculator_ip_addresses_taken">IP Addresses Taken!</string>

    <!--Registration Dialog-->
    <string name="registration_title">Registration</string>
    <string name="registration_content">Please enter the name for:</string>
    <string name="registration_placeholder_cidr_notation_range">0.0.0.0/0  –  0.0.0.0/0</string>
    <string name="registration_hint_name">Name</string>
    <string name="registration_button_cancel">Cancel</string>
    <string name="registration_button_confirm">Confirm</string>

    <!--Detail Fragment-->
    <string name="detail_info_cidr_notation">CIDR Notation:</string>
    <string name="detail_info_cidr_netmask">CIDR Netmask:</string>
    <string name="detail_info_wildcard_mask">Wildcard Mask:</string>
    <string name="detail_info_ip_address_range">IP Address Range:</string>
    <string name="detail_placeholder_ip_address_range">0.0.0.0  –  0.0.0.0</string>
    <string name="detail_placeholder_cidr_notation">0.0.0.0/00</string>
    <string name="detail_placeholder_cidr_netmask">0.0.0.0</string>
    <string name="detail_placeholder_wildcard_mask">0.0.0.0</string>

    <!--Shared Strings-->
    <string name="shared_registration_successful">Registration Successful!</string>
    <string name="shared_error_empty_input">Please fill in the information.</string>
    <string name="shared_button_create_account">Create Account</string>
    <string name="shared_format_range">%1$s  –  %2$s</string>
</resources>
