<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:minWidth="250dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingTop="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:orientation="vertical"
        android:background="@color/white">

        <TextView
            android:text="@string/registration_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/registration_content"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp" />

        <TextView
            android:id="@+id/textview_cidr_notation_range"
            android:text="@string/registration_placeholder_cidr_notation_range"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16sp" />

        <EditText
            android:id="@+id/edittext_input_name"
            android:hint="@string/registration_hint_name"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_cancel"
                android:text="@string/registration_button_cancel"
                android:textSize="16sp"
                android:textColor="@color/button_color"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent" />

            <Button
                android:id="@+id/button_confirm"
                android:text="@string/registration_button_confirm"
                android:textSize="16sp"
                android:textColor="@color/button_color"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
