<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="8dp">

    <LinearLayout
        android:id="@+id/layout_calculator_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edittext_input_ip_address"
            android:hint="@string/calculator_hint_ip_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edittext_input_num_addresses"
            android:hint="@string/calculator_hint_number_of_addresses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1.0">

            <Button
                android:id="@+id/button_calculate_and_register"
                android:text="@string/calculator_button_calculate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textColor="@color/white"
                style="@style/Button" />

            <Button
                android:id="@+id/button_clear"
                android:text="@string/calculator_button_clear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textColor="@color/white"
                style="@style/Button" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_calculator_input"
        android:visibility="invisible" />
</RelativeLayout>
